syntax = "proto3";

package com.flick.data.proto.api;
 
option java_multiple_files = false;
option java_package = "com.flick.data.proto.api";
import "common.proto";

message TransactionReq {
    com.flick.data.proto.common.Block block = 1;
}

message TransactionRes {
    bool success = 1;
}

message BlockListReq {
    bytes accountId = 1;
    int32 num = 2;
}

message BlockListRes {
    repeated com.flick.data.proto.common.Block block = 1;
}

message LastBlockReq {
    bytes accountId = 1;
}

message LastBlockRes {
    com.flick.data.proto.common.Block block = 1;
}

message AccountCountReq {
    int64 count = 1;
}

message AccountCountRes {
    int64 count = 1;
}

service AccountService {
    rpc transaction(TransactionReq) returns (TransactionRes);
    rpc numAccounts(AccountCountReq) returns (AccountCountRes);
    rpc listBlocks(BlockListReq) returns (BlockListRes);
    rpc lastBlock(LastBlockReq) returns (LastBlockRes);
}